# EDG-TEAM

./: .gitignore  README.md
src/Utils/fake_object/py/: fake_object.py
src/Utils/odom_visualization/src/: odom_visualization.cpp
src/planner/plan_env/src/: grid_map.cpp
src/planner/plan_manage/: CMakeLists.txt  package.xml
src/planner/plan_manage/launch/: advanced_param_circle.xml  advanced_param_large_scale.xml  advanced_param_narrow_gate.xml  advanced_param_rect.xml  default.rviz  default_group_planning.rviz  drones_pos_50.yaml  large_scale_simulation.launch  narrow_gate_challenge.launch  real_world_circle.launch  real_world_rect.launch  run_in_sim_circle.launch  run_in_sim_large_scale.launch  run_in_sim_narrow_gate.launch  run_in_sim_rect.launch  rviz_map_circle.launch  rviz_map_large_scale_simulation.launch  rviz_map_narrow_gate.launch  rviz_map_rect.launch  simulator.xml
src/planner/plan_manage/src/: ego_replan_fsm.cpp  planner_manager.cpp  traj_server.cpp
src/planner/swarm_bridge/: CMakeLists.txt  package.xml
src/planner/swarm_bridge/include/: reliable_bridge.hpp
src/planner/swarm_bridge/launch/: bridge_tcp_drone.launch  bridge_tcp_station.launch  bridge_udp.launch  bridge_udp_and_stop.launch
src/planner/swarm_bridge/py/: send_stop.py
src/planner/swarm_bridge/src/: bridge_node_tcp.cpp  bridge_node_udp.cpp  traj2odom_node.cpp
src/planner/traj_opt/src/: poly_traj_optimizer.cpp
src/planner/traj_utils/: CMakeLists.txt
src/planner/traj_utils/src/: planning_visualization.cpp
src/uav_simulator/map_generator/: CMakeLists.txt
(+13 files in other folders)
